# Maratis-4

./: .gitignore  Acknowledgements.txt  CMakeLists.txt  README.md  README.txt  build_unix.sh  build_vc.bat  build_xcode.sh
Data/Editor/Resources/: preferences.xml
Data/Editor/Resources/meshes/default/: Jules.maa  Jules.mesh  box.mesh  cone.mesh  cylinder.mesh  sphere.mesh
Data/Editor/Resources/meshes/gui/: box.mesh  camera.mesh  cone.mesh  light.mesh  plane.mesh  sound.mesh  sphere.mesh  x.mesh  xcircle.mesh  y.mesh  ycircle.mesh  z.mesh  zcircle.mesh
Data/Editor/Resources/test/: script.lua
Data/Editor/Resources/themes/blue/: blue.xml
Data/Editor/Resources/themes/grey/: grey.xml
Sources/Common/Behaviors/Follow/: MBFollow.cpp  MBFollow.h
Sources/Common/Behaviors/LookAt/: MBLookAt.cpp  MBLookAt.h
Sources/Common/Contexts/AL/: MALContext.cpp  MALContext.h
Sources/Common/Contexts/Bullet/: MBulletContext.cpp  MBulletContext.h
Sources/Common/Contexts/ES1/: MES1Context.cpp  MES1Context.h
Sources/Common/Contexts/ES2/: MES2Context.cpp  MES2Context.h
Sources/Common/Contexts/GL/: MGLContext.cpp  MGLContext.h
Sources/Common/Contexts/Input/: MInput.cpp  MInput.h
Sources/Common/Contexts/Script/: MScript.cpp  MScript.h
Sources/Common/Contexts/System/: MWinContext.cpp  MWinContext.h
Sources/Common/GUI/: MGUI.h  MGUI_GLFW.cpp  MGUI_SDL.cpp
Sources/Common/Loaders/BinFont/: MBinFontLoader.cpp  MBinFontLoader.h
Sources/Common/Loaders/BinMesh/: MBinMeshLoader.cpp  MBinMeshLoader.h
Sources/Common/Loaders/DevIL/: MDevILLoader.cpp  MDevILLoader.h
Sources/Common/Loaders/FreeImage/: MFreeImageLoader.cpp  MFreeImageLoader.h
Sources/Common/Loaders/Freetype/: MFreetypeLoader.cpp  MFreetypeLoader.h
Sources/Common/Loaders/Level/: MLevelLoad.cpp  MLevelLoad.h
Sources/Common/Loaders/Mesh/: MMeshLoad.cpp  MMeshLoad.h
Sources/Common/Loaders/SndFile/: MSndFileLoader.cpp  MSndFileLoader.h
Sources/Common/Loaders/WavSound/: MWavSoundLoader.cpp  MWavSoundLoader.h
Sources/Common/Loaders/iOSImage/: MiOSImageLoader.h  MiOSImageLoader.mm
Sources/Common/Managers/PackageNPK/: MPackageManagerNPK.cpp  MPackageManagerNPK.h
Sources/Common/Renderers/Fixed/: MFixedRenderer.cpp  MFixedRenderer.h
Sources/Common/Renderers/Standard/: MStandardRenderer.cpp  MStandardRenderer.h  MStandardShaders.h
Sources/MSDK/: CMakeLists.txt
Sources/MSDK/MCore/: CMakeLists.txt
Sources/MSDK/MCore/Includes/: MColor.h  MCore.h  MDataLoader.h  MDataManager.h  MFile.h  MFileTools.h  MImage.h  MInputContext.h  MLog.h  MMaths.h  MMatrix4x4.h  MPhysicsContext.h  MQuaternion.h  MRenderingContext.h  MScriptContext.h  MSound.h  MSoundContext.h  MStdFile.h  MString.h  MStringTools.h  MSystemContext.h  MUtils.h  MVector2.h  MVector3.h  MVector4.h
Sources/MSDK/MCore/Sources/: MColor.cpp  MCore.cpp  MDataLoader.cpp  MDataManager.cpp  MFileTools.cpp  MImage.cpp  MLog.cpp  MMaths.cpp  MMatrix4x4.cpp  MQuaternion.cpp  MSound.cpp  MStdFile.cpp  MString.cpp  MStringTools.cpp  MVector2.cpp  MVector3.cpp  MVector4.cpp
Sources/MSDK/MEngine/: CMakeLists.txt
Sources/MSDK/MEngine/Includes/: MArmature.h  MArmatureAnim.h  MArmatureAnimRef.h  MBehavior.h  MBehaviorCreator.h  MBehaviorManager.h  MBox3d.h  MEngine.h  MFXManager.h  MFont.h  MFontRef.h  MFrustum.h  MGame.h  MKey.h  MLevel.h  MMaterial.h  MMaterialAnim.h  MMaterialsAnim.h  MMaterialsAnimRef.h  MMesh.h  MMeshRef.h  MMeshTools.h  MMorphingData.h  MOBone.h  MOCamera.h  MOEntity.h  MOLight.h  MOSound.h  MOText.h  MObject3d.h  MObject3dAnim.h  MPackageManager.h  MRenderer.h  MRendererCreator.h  MRendererManager.h  MScene.h  MShaderRef.h  MSkinData.h  MSoundRef.h  MTexture.h  (+5 more)
Sources/MSDK/MEngine/Sources/: MArmature.cpp  MArmatureAnim.cpp  MArmatureAnimRef.cpp  MBehavior.cpp  MBehaviorCreator.cpp  MBehaviorManager.cpp  MBox3d.cpp  MEngine.cpp  MFXManager.cpp  MFont.cpp  MFontRef.cpp  MFrustum.cpp  MGame.cpp  MKey.cpp  MLevel.cpp  MMaterial.cpp  MMaterialAnim.cpp  MMaterialsAnim.cpp  MMaterialsAnimRef.cpp  MMesh.cpp  MMeshRef.cpp  MMeshTools.cpp  MMorphingData.cpp  MOBone.cpp  MOCamera.cpp  MOEntity.cpp  MOLight.cpp  MOSound.cpp  MOText.cpp  MObject3d.cpp  MObject3dAnim.cpp  MRenderer.cpp  MRendererCreator.cpp  MRendererManager.cpp  MScene.cpp  MShaderRef.cpp  MSkinData.cpp  MSoundRef.cpp  MTextureAnim.cpp  MTextureRef.cpp  (+3 more)
Sources/MSDK/MGui/: CMakeLists.txt
Sources/MSDK/MGui/Includes/: MGui.h  MGui2d.h  MGuiButton.h  MGuiColorPicker.h  MGuiEditText.h  MGuiEvents.h  MGuiFileBrowser.h  MGuiImage.h  MGuiMenu.h  MGuiNode.h  MGuiSlide.h  MGuiText.h  MGuiWindow.h  MWinEvents.h  MWindow.h
Sources/MSDK/MGui/Sources/: MGui2d.cpp  MGuiButton.cpp  MGuiColorPicker.cpp  MGuiEditText.cpp  MGuiFileBrowser.cpp  MGuiImage.cpp  MGuiMenu.cpp  MGuiNode.cpp  MGuiSlide.cpp  MGuiText.cpp  MGuiWindow.cpp  MWindow.cpp
Sources/Maratis/Editor/: CMakeLists.txt  MEditor.cpp  MEditor.h  MPreferences.cpp  MPreferences.h  MRenderArray.cpp  MRenderArray.h  MSelectionManager.cpp  MSelectionManager.h  MSelectionUtils.cpp  MSelectionUtils.h  MSyntax.cpp  MSyntax.h  MUIConstants.h  MUserView.cpp  MUserView.h  MV3dEdit.cpp  MV3dEdit.h  MV3dView.cpp  MV3dView.h  MViewport.h  main.cpp
Tests/GUI/: CMakeLists.txt  main.cpp
Tests/ManualUse/: CMakeLists.txt  MyGame.cpp  MyGame.h  main.cpp
Tests/ManualUse/data/: box.mesh  robot.maa  robot.mesh  robot.mma
Tools/Blender/maratis/: __init__.py  export_maratis.py
