## Find source and headers
FILE(GLOB HEADERS Includes/*.h)
FILE(GLOB SOURCES Sources/*.c*)

IF(CMAKE_HAS_SORT)
  LIST(SORT HEADERS)
  LIST(SORT SOURCES)
ENDIF(CMAKE_HAS_SORT)

## Build
INCLUDE_DIRECTORIES(${MC_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${MCORE_INCLUDE_DIR})
IF(WIN32)
  INCLUDE_DIRECTORIES(${DIRENT_INCLUDE_DIR})
ENDIF(WIN32)

ADD_DEFINITIONS(-DMCORE_DLL)
ADD_LIBRARY(MCore SHARED ${SOURCES} ${HEADERS})

TARGET_LINK_LIBRARIES(MCore ${MC_LIBRARIES})

## Install for Editor
INSTALL(TARGETS MCore DESTINATION ${MARATIS_INSTALL_DIR})

## Install for SDK
INSTALL(TARGETS MCore DESTINATION ${MARATIS_INSTALL_DIR}/SDK/lib)
INSTALL(FILES ${HEADERS} DESTINATION ${MARATIS_INSTALL_DIR}/SDK/include/MCore)

IF(APPLE)
  SET_TARGET_PROPERTIES(
    MCore
    PROPERTIES
    INSTALL_NAME_DIR "@rpath"
  )
ENDIF(APPLE)