## Find source and headers
FILE(GLOB HEADERS Includes/*.h)
FILE(GLOB SOURCES Sources/*.c*)

IF(CMAKE_HAS_SORT)
  LIST(SORT HEADERS)
  LIST(SORT SOURCES)
ENDIF(CMAKE_HAS_SORT)

## Build
INCLUDE_DIRECTORIES(
  ${MC_INCLUDE_DIR}
  ${MCORE_INCLUDE_DIR}
  ${MENGINE_INCLUDE_DIR}
  ${TINYUTF8_INCLUDE_DIR}
)

ADD_DEFINITIONS(-DMENGINE_DLL)
ADD_LIBRARY(MEngine SHARED ${SOURCES} ${HEADERS})

TARGET_LINK_LIBRARIES(MEngine ${MC_LIBRARIES} ${MCORE_LIBRARIES})

## Install for Editor
INSTALL(TARGETS MEngine DESTINATION ${MARATIS_INSTALL_DIR})

## Install for SDK
INSTALL(TARGETS MEngine DESTINATION ${MARATIS_INSTALL_DIR}/SDK/lib)
INSTALL(FILES ${HEADERS} DESTINATION ${MARATIS_INSTALL_DIR}/SDK/include/MEngine)

IF(APPLE)
  SET_TARGET_PROPERTIES(
    MEngine
    PROPERTIES
    INSTALL_NAME_DIR "@rpath"
  )
ENDIF(APPLE)