## Find source and headers
FILE(GLOB HEADERS Includes/*.h)
FILE(GLOB SOURCES Sources/*.c*)

IF(CMAKE_HAS_SORT)
  LIST(SORT HEADERS)
  LIST(SORT SOURCES)
ENDIF(CMAKE_HAS_SORT)

## Build
INCLUDE_DIRECTORIES(
  ${MC_INCLUDE_DIR}
  ${MCORE_INCLUDE_DIR}
  ${MENGINE_INCLUDE_DIR}
  ${MGUI_INCLUDE_DIR}
  ${TINYUTF8_INCLUDE_DIR}
)

ADD_DEFINITIONS(-DMGUI_DLL)
ADD_LIBRARY(MGui SHARED ${SOURCES} ${HEADERS})

TARGET_LINK_LIBRARIES(MGui ${MC_LIBRARIES} ${MCORE_LIBRARIES} ${MENGINE_LIBRARIES})

## Install for Editor
INSTALL(TARGETS MGui DESTINATION ${MARATIS_INSTALL_DIR})

## Install for SDK
INSTALL(TARGETS MGui DESTINATION ${MARATIS_INSTALL_DIR}/SDK/lib)
INSTALL(FILES ${HEADERS} DESTINATION ${MARATIS_INSTALL_DIR}/SDK/include/MGui)

IF(APPLE)
  SET_TARGET_PROPERTIES(
    MGui
    PROPERTIES
    INSTALL_NAME_DIR "@rpath"
  )
ENDIF(APPLE)
